--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.4.5",
+    "@sauskylark/potree": "^1.8.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -14,10 +15,13 @@
     "cesium": "^1.96.0",
     "craco-cesium": "^1.2.0",
     "craco-less": "^2.0.0",
+    "potree-core": "^2.0.5",
+    "proj4": "^2.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "three": "0.151.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -44,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/three": "^0.155.0"
   }
 }
